--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,42 @@
-# ======================
-# Node modules
-# ======================
-client/node_modules/
-server/node_modules/
+# -------------------------------
+# Node modules (ignore everywhere)
+# -------------------------------
+node_modules/
+**/node_modules/
 
-# ======================
+# -------------------------------
 # Build outputs
-# ======================
+# -------------------------------
 client/dist/
 client/build/
-client/dist-ssr/
 server/dist/
 server/build/
 
-# ======================
+# -------------------------------
 # Environment files
-# ======================
+# -------------------------------
 *.env
-*.local
+**/.env
 
-# ======================
+# -------------------------------
 # Logs
-# ======================
-logs
-*.log
+# -------------------------------
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+logs
+*.log
 
-# ======================
+# -------------------------------
 # OS / Editor files
-# ======================
+# -------------------------------
+.DS_Store
+Thumbs.db
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
-Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
